--- a/front-end/index.html
+++ b/front-end/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="navbar">
         <div>
-            <input type="search" placeholder="Search" id="queries" oninput="debounce(fetchData,2000)">
+            <input type="search" placeholder="Search" id="queries" oninput="debounce(1000)">
             <i id="icon" class="fa-solid fa-magnifying-glass" onclick="getData()"></i>
         </div>
         <a class="Login" href="./login.html">Login</a>
@@ -25,4 +25,4 @@
 </body>
 
 </html>
-<script src="./Script/index.js" type='module'></script>
+<script src="./Script/index.js" ></script>
